Homework 3.3 is ready(correct!)!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-//spring.application.name=Hogwarts school
+## spring.application.name=Hogwarts school
 spring.datasource.url= jdbc:postgresql://localhost:5432/Hogwarts
 spring.datasource.username= student
 spring.datasource.password= chocolatefrog
