Homework 3.4 is ready!

--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,13 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.1.10</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 	
 
 	<build>
