--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 ## spring.application.name=Hogwarts school
-spring.datasource.url= jdbc:postgresql://localhost:5432/Hogwarts
+spring.datasource.url= jdbc:postgresql://localhost:5432/hogwarts
 spring.datasource.username= student
 spring.datasource.password= chocolatefrog
 spring.jpa.hibernate.ddl-auto= update
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 
+application.avatars-dir-name=./avatar
