Homework 4.3 is ready!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 
 application.avatars-dir-name=./avatar
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 spring.jpa.show-sql=true
