--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,11 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+		</dependency>
+
     </dependencies>
 	
 
