--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 application.avatars-dir-name=./avatar
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+#logging.level.root=debug
+server.port = 8080
 spring.jpa.show-sql=true
